  - fix "final GR" calculation (#2256)
* map
  - new option to disable the wind arrow
* devices
  - fix potential crash in I/O thread
  - fix date/time parsing in Flytec device driver
  - Volkslogger: fix task declaration over Bluetooth
  - CAI GPS-NAV: work around timing problem
  - LX: fix Colibri/LX20 declaration problems
* user interface
  - remove duplicate "trail drift" setting (#2252)
* logger
  - IGC B record is invalid ("V") with just 2D fix
  - log pressure altitude in IGC files

Version 6.4 - 2012/07/31
* calculations
  - Contest: add FFVV NetCoupe (#1648)
  - Contest: optionally include next task point in OLC classic/plus
    score calculation (#1561)
* devices
  - support up to 6 devices
  - buffered serial port I/O
  - FLARM: new FLARM setup dialog
  - added drivers for GliderTools GT Altimeter and Compass C-Probe
  - LXNAV V7 and Nano configuration dialog
* data files
  - removed support for separate terrain/topography files, now XCM only
* map
  - configurable airspace rendering (#1847)
  - "dots for sink" trail styles
  - weather stations on the map (#1487)
* user interface
  - added "Airspace On/Off" menu button
  - save Flarm team mates in the profile (#1997)
  - added para- and hang glider and aircraft symbols (#1626)
  - audio vario (#1576)
  - improved airspace list rendering
  - configurable map item list (#1936)
  - "GoTo" button in map item list (#2069)
  - show corresponding waypoint file in waypoint details dialog (#1624)
  - show gesture path while dragging
  - file manager, can download data files
  - new option to disable the "final glide" display mode
* infoboxes
  - added automatic altitude infobox (baro. altitude with GPS fallback)
  - added wind arrow infobox (#1598)
* Android
  - support x86 and MIPS CPUs
  - Bluetooth server for NMEA out

Version 6.3.11 - 2012/07/27
* calculations
  - fix freeze in glide solver
  - fix transition in small cylinder for key hole observation zones
    (e.g. BGA, #2229)