@@ -27,6 +27,7 @@ Version 6.4.1 - not yet released
   - LX: fix Colibri/LX20 declaration problems
 * user interface
   - remove duplicate "trail drift" setting (#2252)
+  - fix flarm teamcolor saving (#2291)
 * logger
   - IGC B record is invalid ("V") with just 2D fix
   - log pressure altitude in IGC files
